move things around; fix menu on mobile

--- a/_sass/site_nav.sass
+++ b/_sass/site_nav.sass
@@ -5,18 +5,18 @@ $time: 0.4s
         position: relative
 
     .site-title
-        -webkit-transition: color $time ease
-        -moz-transition: color $time ease
-        -transition: color $time ease
-
         padding-top: .25rem
         padding-bottom: .32rem
         font-size: 1.25rem
-        color: rgba(white, 0.7)
+        a
+            -webkit-transition: color $time ease
+            -moz-transition: color $time ease
+            -transition: color $time ease
+            color: rgba(white, 0.7)
 
-        &:hover
-            text-decoration: none
-            color: white
+            &:hover
+                text-decoration: none
+                color: white
 
     #navbar-sitenav
         margin-left: 1em
